crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__empty-method-without-abstract-decorator_B027.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B027 `AbstractClass.empty_1` is an empty method in an abstract base class, but has no abstract decorator
  --> B027.py:18:5
   |
17 |   class AbstractClass(ABC):
18 | /     def empty_1(self):  # error
19 | |         ...
   | |___________^
20 |
21 |       def empty_2(self):  # error
   |

B027 `AbstractClass.empty_2` is an empty method in an abstract base class, but has no abstract decorator
  --> B027.py:21:5
   |
19 |           ...
20 |
21 | /     def empty_2(self):  # error
22 | |         pass
   | |____________^
23 |
24 |       def empty_3(self):  # error
   |

B027 `AbstractClass.empty_3` is an empty method in an abstract base class, but has no abstract decorator
  --> B027.py:24:5
   |
22 |           pass
23 |
24 | /     def empty_3(self):  # error
25 | |         """docstring"""
26 | |         ...
   | |___________^
27 |
28 |       def empty_4(self):  # error
   |

B027 `AbstractClass.empty_4` is an empty method in an abstract base class, but has no abstract decorator
  --> B027.py:28:5
   |
26 |           ...
27 |
28 | /     def empty_4(self):  # error
29 | |         """multiple ellipsis/pass"""
30 | |         ...
31 | |         pass
32 | |         ...
33 | |         pass
   | |____________^
34 |
35 |       @notabstract
   |
