crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__extend_immutable_calls_arg_annotation.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B006 [*] Do not use mutable data structures for argument defaults
  --> B006_extended.py:17:55
   |
17 | def error_due_to_missing_import(foo: ImmutableTypeA = []):
   |                                                       ^^
18 |     ...
   |
help: Replace with `None`; initialize within function
   |
17 - def error_due_to_missing_import(foo: ImmutableTypeA = []):
17 + def error_due_to_missing_import(foo: ImmutableTypeA = None):
   |
note: This is an unsafe fix and may change runtime behavior
