crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__extend_mutable_contextvar_default.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B039 Do not use mutable data structures for `ContextVar` defaults
 --> B039_extended.py:7:26
  |
6 | from something_else import Depends
7 | ContextVar("cv", default=Depends())
  |                          ^^^^^^^^^
help: Replace with `None`; initialize with `.set()``
