crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__function-call-in-default-argument_B006_10.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B008 Do not perform function call `weakref.WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
 --> B006_10.py:7:7
  |
6 | def weakref_module(
7 |     a=weakref.WeakKeyDictionary(),
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |     b=weakref.WeakValueDictionary(),
9 |     c=weakref.WeakSet(),
  |

B008 Do not perform function call `weakref.WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:8:7
   |
 6 | def weakref_module(
 7 |     a=weakref.WeakKeyDictionary(),
 8 |     b=weakref.WeakValueDictionary(),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 9 |     c=weakref.WeakSet(),
10 | ):
   |

B008 Do not perform function call `weakref.WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:9:7
   |
 7 |     a=weakref.WeakKeyDictionary(),
 8 |     b=weakref.WeakValueDictionary(),
 9 |     c=weakref.WeakSet(),
   |       ^^^^^^^^^^^^^^^^^
10 | ):
11 |     pass
   |

B008 Do not perform function call `WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:15:7
   |
14 | def weakref_from_import(
15 |     a=WeakKeyDictionary(),
   |       ^^^^^^^^^^^^^^^^^^^
16 |     b=WeakValueDictionary(),
17 |     c=WeakSet(),
   |

B008 Do not perform function call `WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:16:7
   |
14 | def weakref_from_import(
15 |     a=WeakKeyDictionary(),
16 |     b=WeakValueDictionary(),
   |       ^^^^^^^^^^^^^^^^^^^^^
17 |     c=WeakSet(),
18 | ):
   |

B008 Do not perform function call `WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:17:7
   |
15 |     a=WeakKeyDictionary(),
16 |     b=WeakValueDictionary(),
17 |     c=WeakSet(),
   |       ^^^^^^^^^
18 | ):
19 |     pass
   |

B008 Do not perform function call `wr.WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:23:7
   |
22 | def weakref_aliased(
23 |     a=wr.WeakKeyDictionary(),
   |       ^^^^^^^^^^^^^^^^^^^^^^
24 |     b=wr.WeakValueDictionary(),
25 |     c=wr.WeakSet(),
   |

B008 Do not perform function call `wr.WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:24:7
   |
22 | def weakref_aliased(
23 |     a=wr.WeakKeyDictionary(),
24 |     b=wr.WeakValueDictionary(),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
25 |     c=wr.WeakSet(),
26 | ):
   |

B008 Do not perform function call `wr.WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:25:7
   |
23 |     a=wr.WeakKeyDictionary(),
24 |     b=wr.WeakValueDictionary(),
25 |     c=wr.WeakSet(),
   |       ^^^^^^^^^^^^
26 | ):
27 |     pass
   |

B008 Do not perform function call `weakref.WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:31:8
   |
30 | def weakref_parenthesized(
31 |     a=(weakref.WeakKeyDictionary()),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 |     b=(WeakValueDictionary()),
33 |     c=(wr.WeakSet()),
   |

B008 Do not perform function call `WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:32:8
   |
30 | def weakref_parenthesized(
31 |     a=(weakref.WeakKeyDictionary()),
32 |     b=(WeakValueDictionary()),
   |        ^^^^^^^^^^^^^^^^^^^^^
33 |     c=(wr.WeakSet()),
34 | ):
   |

B008 Do not perform function call `wr.WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:33:8
   |
31 |     a=(weakref.WeakKeyDictionary()),
32 |     b=(WeakValueDictionary()),
33 |     c=(wr.WeakSet()),
   |        ^^^^^^^^^^^^
34 | ):
35 |     pass
   |

B008 Do not perform function call in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:39:7
   |
38 | def weakref_subscripted(
39 |     a=weakref.WeakKeyDictionary[int, str](),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
40 |     b=WeakValueDictionary[str, int](),
41 |     c=wr.WeakSet[int](),
   |

B008 Do not perform function call in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:40:7
   |
38 | def weakref_subscripted(
39 |     a=weakref.WeakKeyDictionary[int, str](),
40 |     b=WeakValueDictionary[str, int](),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
41 |     c=wr.WeakSet[int](),
42 | ):
   |

B008 Do not perform function call in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
  --> B006_10.py:41:7
   |
39 |     a=weakref.WeakKeyDictionary[int, str](),
40 |     b=WeakValueDictionary[str, int](),
41 |     c=wr.WeakSet[int](),
   |       ^^^^^^^^^^^^^^^^^
42 | ):
43 |     pass
   |
