crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__function-call-in-default-argument_B006_B008.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B008 Do not perform function call `time.time` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:129:39
    |
127 | # B008
128 | # Flag function calls as default args (including if they are part of a sub-expression)
129 | def in_fact_all_calls_are_wrong(value=time.time()):
    |                                       ^^^^^^^^^^^
130 |     ...
    |

B008 Do not perform function call `dt.datetime.now` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:133:12
    |
133 | def f(when=dt.datetime.now() + dt.timedelta(days=7)):
    |            ^^^^^^^^^^^^^^^^^
134 |     pass
    |

B008 Do not perform function call in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:137:30
    |
137 | def can_even_catch_lambdas(a=(lambda x: x)()):
    |                              ^^^^^^^^^^^^^^^
138 |     ...
    |

B008 Do not perform function call `dt.datetime.now` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:245:31
    |
243 | # B006 and B008
244 | # We should handle arbitrary nesting of these B008.
245 | def nested_combo(a=[float(3), dt.datetime.now()]):
    |                               ^^^^^^^^^^^^^^^^^
246 |     pass
    |

B008 Do not perform function call `map` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:251:22
    |
249 | # Don't flag nested B006 since we can't guarantee that
250 | # it isn't made mutable by the outer operation.
251 | def no_nested_b006(a=map(lambda s: s.upper(), ["a", "b", "c"])):
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
252 |     pass
    |

B008 Do not perform function call `random.randint` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:256:19
    |
255 | # B008-ception.
256 | def nested_b008(a=random.randint(0, dt.datetime.now().year)):
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
257 |     pass
    |

B008 Do not perform function call `dt.datetime.now` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:256:37
    |
255 | # B008-ception.
256 | def nested_b008(a=random.randint(0, dt.datetime.now().year)):
    |                                     ^^^^^^^^^^^^^^^^^
257 |     pass
    |

B008 Do not perform function call `weakref.WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:324:7
    |
323 | def weakref_module(
324 |     a=weakref.WeakKeyDictionary(),
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
325 |     b=weakref.WeakValueDictionary(),
326 |     c=weakref.WeakSet(),
    |

B008 Do not perform function call `weakref.WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:325:7
    |
323 | def weakref_module(
324 |     a=weakref.WeakKeyDictionary(),
325 |     b=weakref.WeakValueDictionary(),
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
326 |     c=weakref.WeakSet(),
327 | ):
    |

B008 Do not perform function call `weakref.WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:326:7
    |
324 |     a=weakref.WeakKeyDictionary(),
325 |     b=weakref.WeakValueDictionary(),
326 |     c=weakref.WeakSet(),
    |       ^^^^^^^^^^^^^^^^^
327 | ):
328 |     pass
    |

B008 Do not perform function call `WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:332:7
    |
331 | def weakref_from_import(
332 |     a=WeakKeyDictionary(),
    |       ^^^^^^^^^^^^^^^^^^^
333 |     b=WeakValueDictionary(),
334 |     c=WeakSet(),
    |

B008 Do not perform function call `WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:333:7
    |
331 | def weakref_from_import(
332 |     a=WeakKeyDictionary(),
333 |     b=WeakValueDictionary(),
    |       ^^^^^^^^^^^^^^^^^^^^^
334 |     c=WeakSet(),
335 | ):
    |

B008 Do not perform function call `WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:334:7
    |
332 |     a=WeakKeyDictionary(),
333 |     b=WeakValueDictionary(),
334 |     c=WeakSet(),
    |       ^^^^^^^^^
335 | ):
336 |     pass
    |

B008 Do not perform function call `wr.WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:340:7
    |
339 | def weakref_aliased(
340 |     a=wr.WeakKeyDictionary(),
    |       ^^^^^^^^^^^^^^^^^^^^^^
341 |     b=wr.WeakValueDictionary(),
342 |     c=wr.WeakSet(),
    |

B008 Do not perform function call `wr.WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:341:7
    |
339 | def weakref_aliased(
340 |     a=wr.WeakKeyDictionary(),
341 |     b=wr.WeakValueDictionary(),
    |       ^^^^^^^^^^^^^^^^^^^^^^^^
342 |     c=wr.WeakSet(),
343 | ):
    |

B008 Do not perform function call `wr.WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:342:7
    |
340 |     a=wr.WeakKeyDictionary(),
341 |     b=wr.WeakValueDictionary(),
342 |     c=wr.WeakSet(),
    |       ^^^^^^^^^^^^
343 | ):
344 |     pass
    |

B008 Do not perform function call `weakref.WeakKeyDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:348:8
    |
347 | def weakref_parenthesized(
348 |     a=(weakref.WeakKeyDictionary()),
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
349 |     b=(WeakValueDictionary()),
350 |     c=(wr.WeakSet()),
    |

B008 Do not perform function call `WeakValueDictionary` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:349:8
    |
347 | def weakref_parenthesized(
348 |     a=(weakref.WeakKeyDictionary()),
349 |     b=(WeakValueDictionary()),
    |        ^^^^^^^^^^^^^^^^^^^^^
350 |     c=(wr.WeakSet()),
351 | ):
    |

B008 Do not perform function call `wr.WeakSet` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:350:8
    |
348 |     a=(weakref.WeakKeyDictionary()),
349 |     b=(WeakValueDictionary()),
350 |     c=(wr.WeakSet()),
    |        ^^^^^^^^^^^^
351 | ):
352 |     pass
    |

B008 Do not perform function call in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:356:7
    |
355 | def weakref_subscripted(
356 |     a=weakref.WeakKeyDictionary[int, str](),
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
357 |     b=WeakValueDictionary[str, int](),
358 |     c=wr.WeakSet[int](),
    |

B008 Do not perform function call in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:357:7
    |
355 | def weakref_subscripted(
356 |     a=weakref.WeakKeyDictionary[int, str](),
357 |     b=WeakValueDictionary[str, int](),
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
358 |     c=wr.WeakSet[int](),
359 | ):
    |

B008 Do not perform function call in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
   --> B006_B008.py:358:7
    |
356 |     a=weakref.WeakKeyDictionary[int, str](),
357 |     b=WeakValueDictionary[str, int](),
358 |     c=wr.WeakSet[int](),
    |       ^^^^^^^^^^^^^^^^^
359 | ):
360 |     pass
    |
